--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -5,6 +5,9 @@
     "main": "index.js",
     "scripts": {
         "start": "croos-env ENV_FILE=../../config/development/dev.env nodemon dist/main.js",
+        "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+        "docker:run": "docker run -it $npm_package_name:$npm_package_version",
+        "prebuild": "npm run build:clean",
         "pretest": "npm run build",
         "build": "npm run build:clean && npm run build:dist",
         "build:watch": "npm run build:dist -- --watch",
