--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -35,6 +35,7 @@
 		"jest": "^21.1.0",
 		"rimraf": "^2.6.1",
 		"spinjs": "0.4.18",
+		"tslib": "^1.9.0",
 		"webpack": "^3.7.1"
 	},
 	"dependencies": {
