update on hemera-server

--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -1,18 +1,25 @@
 {
     "name": "sample-stack-hemera-server",
-    "version": "1.0.0",
+    "version": "0.0.10",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "croos-env ENV_FILE=../../config/development/dev.env nodemon dist/main.js",
+        "watch": "npm run start:dev",
+        "start": "node dist/index.js",
+        "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env nodemon dist",
+        "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon nodemon dist",
         "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
         "docker:run": "docker run -it $npm_package_name:$npm_package_version",
         "prebuild": "npm run build:clean",
         "pretest": "npm run build",
-        "build": "npm run build:clean && npm run build:dist",
+        "build": "cross-env NODE_ENV=production npm run build:dist",
         "build:watch": "npm run build:dist -- --watch",
         "build:dist": "webpack",
-        "build:clean": "rimraf dist"
+        "build:clean": "rimraf dist",
+        "jest": "./node_modules/.bin/jest",
+		"test": "jest",
+		"test:debug": "npm test -- --runInBand",
+		"test:watch": "npm test -- --watch"
     },
     "author": "CDMBase LLC",
     "license": "ISC",
