--- a/servers/hemera-server/Dockerfile
+++ b/servers/hemera-server/Dockerfile
@@ -1,14 +1,23 @@
 FROM node:8.4-alpine
 
-# Create app directory
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
+# Copy package.json only to temp folder, install its dependencies,
+# set workdir and copy the dependnecies there
+# This way, dependnecies are cached without the need of cacheing all files.
 
-# Install app dependencies
-COPY package.json /usr/src/app/
-RUN npm install --production
+ADD package.json /tmp/package.json
+RUN set -ex \
+	&& cd /tmp \
+	&& npm install \
+	&& mkdir -p /home/app \
+	&& cp -a /tmp/node_modules /home/app/ \
+	&& rm -Rf /tmp/*
 
-# Bundle app source
-COPY . /usr/src/app
+WORKDIR /home/app
 
-CMD [ "node", "." ]
+# Copy the rest of the files to the container workdir
+ADD . /home/app
+
+ENV PORT=3000
+EXPOSE ${PORT}
+
+CMD [ "npm", "start" ]
