--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.10",
     "description": "",
     "main": "index.js",
+    "private": true,
     "scripts": {
         "watch": "npm run start:dev",
         "start": "node dist/index.js",
