--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "helmet": "^3.6.0",
     "hemera-joi": "^3.0.1",
     "hemera-plugin": "0.1.1",
+    "hemera-zipkin": "^3.0.1",
     "immutability-helper": "^2.2.2",
     "inversify": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
