--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "compile": "lerna exec -- npm run compile",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "publish": "lerna publish",
+    "publish:force": "npm run publish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
     "install": "npm run lerna",
     "clean": "lerna clean",
