update to use remote databaes

--- a/config/test/test.env.sample
+++ b/config/test/test.env.sample
@@ -2,3 +2,8 @@
 # Create `test.env` file and load following required values
 #  
 MONGO_URL=mongodb://localhost:27017/sample-test
+DB_HOST=localhost
+DB_USER=mysql
+DB_PASSWORD=
+DB_SOCKET_PATH=
+DB_DATABASE=test
