--- a/config/development/dev.env.sample
+++ b/config/development/dev.env.sample
@@ -8,3 +8,8 @@ GRAPHQL_URL=http://localhost:8080/graphql
 CLIENT_PORT=3000
 ZIPKIN_URL=
 ZIPKIN_PORT=
+DB_HOST=localhost
+DB_USER=mysql
+DB_PASSWORD=
+DB_SOCKET_PATH=
+DB_DATABASE=test
