--- a/packages/sample-store-sql/tsconfig.json
+++ b/packages/sample-store-sql/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDirs": ["./src", "../../database"],
+    "rootDir": "./src",
     "outDir": "./lib",
     "typeRoots": [
       "../../node_modules/@types"
