--- a/packages/sample-store/package.json
+++ b/packages/sample-store/package.json
@@ -41,12 +41,14 @@
   "license": "ISC",
   "devDependencies": {
     "@sample-stack/utils": "*",
-    "cross-env": "^5.0.5",
-    "jest": "^21.1.0",
+    "cross-env": "^5.1.3",
+    "jest": "^22.1.0",
     "rimraf": "^2.6.1",
-    "webpack": "^3.7.1"
+    "webpack": "^3.10.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@sample-stack/core": "*"
+  },
   "peerDependencies": {
     "sequelize": "4.4.0"
   },
