--- a/config/development/dev.env.sample
+++ b/config/development/dev.env.sample
@@ -8,6 +8,7 @@ GRAPHQL_URL=http://localhost:8080/graphql
 CLIENT_PORT=3000
 ZIPKIN_URL=
 ZIPKIN_PORT=
+DB_TYPE=mysql
 DB_HOST=localhost
 DB_USER=mysql
 DB_PASSWORD=
