update changes to run knex

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -21,8 +21,8 @@
 		"upver": "standard-version",
 		"knex": "ts-node --no-project ./node_modules/.bin/knex",
 		"db:migrate": "npm run knex -- migrate:latest --cwd . --knexfile ./knexfile.ts",
-		"db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./knexfile.ts",
-		"db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./knexfile.ts",
+		"db:migrate:rollback": "npm run knex -- migrate:rollback  --cwd . --knexfile ./knexfile.ts",
+		"db:seed": "npm run knex -- seed:run  --cwd . --knexfile ./knexfile.ts",
 		"stagedb:migrate": "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:migrate",
 		"stagedb:migrate:rollback":  "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:migrate:rollback",
 		"stagedb:seed":  "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:seed",
