update previous commits

--- a/package.json
+++ b/package.json
@@ -217,9 +217,9 @@
     "cors": "^2.8.3",
     "dotenv": "^5.0.0",
     "export-dir": "^0.1.2",
-    "fela": "^6.0.3",
+    "fela": "6.0.3",
     "fela-beautifier": "^5.0.11",
-    "fela-dom": "^6.0.3",
+    "fela-dom": "6.0.3",
     "fela-font-renderer": "^5.0.10",
     "fela-perf": "^5.0.3",
     "fela-plugin-fallback-value": "^5.0.12",
@@ -246,21 +246,21 @@
     "immutability-helper": "^2.2.2",
     "inversify": "^4.10.0",
     "isomorphic-fetch": "^2.2.1",
-    "knex": "^0.14.2",
+    "knex": "^0.13.0",
     "nats": "^0.7.24",
     "nats-hemera": "^3.1.7",
-    "nconf": "^0.8.4",
+    "nconf": "^0.10.0",
     "node-pre-gyp": "~0.6.31",
     "persistgraphql": "^0.3.11",
-    "prop-types": "^15.5.8",
-    "react": "^15.6.0",
-    "react-apollo": "^1.4.16",
-    "react-dom": "^15.6.0",
-    "react-fela": "^6.0.3",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
+    "react-dom": "^16.2.0",
+    "react-fela": "6.0.3",
     "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.5",
+    "react-redux": "^5.0.6",
     "react-redux-typescript": "^2.3.0",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^4.6.2",
@@ -270,10 +270,10 @@
     "redux-injectable-reducer": "^1.0.3",
     "redux-injectable-store": "^1.0.0",
     "redux-thunk": "^2.2.0",
-    "reflect-metadata": "^0.1.10",
-    "reselect": "^3.0.0",
-    "rxjs": "^5.4.3",
-    "sequelize": "^4.8.4",
+    "reflect-metadata": "^0.1.12",
+    "reselect": "^3.0.1",
+    "rxjs": "^5.5.6",
+    "sequelize": "^4.32.6",
     "serialize-javascript": "^1.4.0",
     "sqlite3": "^3.1.8",
     "styled-components": "^2.0.0",
