--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -59,7 +59,7 @@
 		"dotenv": "^5.0.0",
 		"fela": "^6.0.3",
 		"fela-beautifier": "^5.0.11",
-		"fela-dom": "^6.0.3",
+		"fela-dom": "6.0.3",
 		"fela-font-renderer": "^5.0.10",
 		"fela-perf": "^5.0.3",
 		"fela-plugin-fallback-value": "^5.0.12",
@@ -70,19 +70,18 @@
 		"fela-plugin-validator": "^5.0.11",
 		"immutability-helper": "^2.2.2",
 		"ramda": "^0.25.0",
-		"js-cookie": "^2.1.4",
-		"react": "^15.6.0",
-		"react-apollo": "^1.4.16",
-		"react-dom": "^15.6.0",
-		"react-fela": "^6.0.3",
+		"react": "^16.2.0",
+		"react-apollo": "^2.0.4",
+		"react-dom": "^16.2.0",
+		"react-fela": "6.0.3",
 		"react-helmet": "^5.2.0",
-		"react-redux": "^5.0.5",
+		"react-redux": "^5.0.6",
+		"react-redux-typescript": "^2.3.0",
 		"react-resizable": "^1.7.4",
 		"react-resizable-box": "^2.1.0",
-		"react-router-dom": "^4.1.1",
+		"react-router-dom": "^4.2.2",
 		"react-router-redux": "^4.0.8",
 		"react-transition-group": "^2.2.1",
-		"react-redux-typescript": "^2.3.0",
 		"reactstrap": "^4.6.2",
 		"recompose": "^0.26.0",
 		"redux": "^3.6.0",
@@ -92,7 +91,7 @@
 		"redux-loop": "^4.2.1",
 		"redux-persist": ">=4.8.3",
 		"redux-thunk": "^2.2.0",
-		"reselect": "^3.0.0",
+		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.4.0",
 		"graphql": "^0.11.7",
 		"lodash": "^4.17.4",
