udpate correction to make it work with docker

--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -47,8 +47,11 @@
 		"@sample-stack/client-redux": "*",
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/utils": "*",
+		"apollo-cache-inmemory": "^1.1.7",
 		"apollo-client": "^2.2.2",
 		"apollo-link": "^1.0.7",
+		"apollo-link-batch-http": "^1.0.4",
+		"apollo-link-ws": "^1.0.4",
 		"apollo-logger": "^0.1.0",
 		"browser-bunyan": "^1.2.2",
 		"persistgraphql": "^0.3.11",
