arrange order in package.json

--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -53,10 +53,13 @@
 		"apollo-link-batch-http": "^1.0.4",
 		"apollo-link-ws": "^1.0.4",
 		"apollo-logger": "^0.1.0",
+		"body-parser": "^1.18.2",
 		"browser-bunyan": "^1.2.2",
-		"persistgraphql": "^0.3.11",
 		"bunyan": "^1.8.10",
+		"classnames": "^2.2.5",
+		"cors": "^2.8.3",
 		"dotenv": "^5.0.0",
+		"express": "^4.16.2",
 		"fela": "^6.0.3",
 		"fela-beautifier": "^5.0.11",
 		"fela-dom": "6.0.3",
@@ -68,7 +71,12 @@
 		"fela-plugin-prefixer": "^5.0.12",
 		"fela-plugin-unit": "^5.0.11",
 		"fela-plugin-validator": "^5.0.11",
+		"graphql": "^0.11.7",
 		"immutability-helper": "^2.2.2",
+		"isomorphic-fetch": "^2.2.1",
+		"js-cookie": "^2.1.4",
+		"lodash": "^4.17.4",
+		"persistgraphql": "^0.3.11",
 		"ramda": "^0.25.0",
 		"react": "^16.2.0",
 		"react-apollo": "^2.0.4",
@@ -93,14 +101,7 @@
 		"redux-thunk": "^2.2.0",
 		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.4.0",
-		"graphql": "^0.11.7",
-		"lodash": "^4.17.4",
 		"subscriptions-transport-ws": "^0.9.5",
-		"isomorphic-fetch": "^2.2.1",
-		"express": "^4.16.2",
-		"classnames": "^2.2.5",
-		"cors": "^2.8.3",
-		"body-parser": "^1.18.2"
 	},
 	"peerDependencies": {
 		"source-map-loader": "*",
