--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -60,17 +60,17 @@
 		"cors": "^2.8.3",
 		"dotenv": "^5.0.0",
 		"express": "^4.16.2",
-		"fela": "^6.0.3",
-		"fela-beautifier": "^5.0.11",
-		"fela-dom": "6.0.3",
+		"fela": "6.1.3",
+		"fela-beautifier": "^5.0.15",
+		"fela-dom": "7.0.4",
 		"fela-font-renderer": "^5.0.10",
 		"fela-perf": "^5.0.3",
-		"fela-plugin-fallback-value": "^5.0.12",
+		"fela-plugin-fallback-value": "^5.0.16",
 		"fela-plugin-logger": "^5.0.4",
-		"fela-plugin-lvha": "^5.0.11",
-		"fela-plugin-prefixer": "^5.0.12",
-		"fela-plugin-unit": "^5.0.11",
-		"fela-plugin-validator": "^5.0.11",
+		"fela-plugin-lvha": "^5.0.15",
+		"fela-plugin-prefixer": "^5.0.16",
+		"fela-plugin-unit": "^5.0.15",
+		"fela-plugin-validator": "^5.0.17",
 		"graphql": "^0.11.7",
 		"immutability-helper": "^2.2.2",
 		"isomorphic-fetch": "^2.2.1",
@@ -81,7 +81,7 @@
 		"react": "^16.2.0",
 		"react-apollo": "^2.0.4",
 		"react-dom": "^16.2.0",
-		"react-fela": "6.0.3",
+		"react-fela": "6.2.4",
 		"react-helmet": "^5.2.0",
 		"react-redux": "^5.0.6",
 		"react-redux-typescript": "^2.3.0",
@@ -101,7 +101,7 @@
 		"redux-thunk": "^2.2.0",
 		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.4.0",
-		"subscriptions-transport-ws": "^0.9.5",
+		"subscriptions-transport-ws": "^0.9.5"
 	},
 	"peerDependencies": {
 		"source-map-loader": "*",
