--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -76,6 +76,7 @@
 		"subscriptions-transport-ws": "^0.9.5",
 		"morgan": "^1.8.1",
 		"nats": "^0.7.24",
+		"nats-hemera": "^3.1.7",
 		"persistgraphql": "^0.3.11",
 		"reflect-metadata": "^0.1.12",
 		"sqlite3": "^3.1.8",
