fixes knex to work with commonjs modules for loading data

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "prebootstrap": "npm install",
-    "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.ts",
-    "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
-    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
+    "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "test": "jest",
     "posttest": "npm run lint",
     "coverage": "jest --coverage",
