--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -19,10 +19,9 @@
 		"docker:run": "docker run -it $npm_package_name:$npm_package_version",
 		"preupver": "npm test",
 		"upver": "standard-version",
-		"knex": "ts-node --no-project ./node_modules/.bin/knex",
-		"db:migrate": "npm run knex -- migrate:latest --cwd . --knexfile ./knexfile.ts",
-		"db:migrate:rollback": "npm run knex -- migrate:rollback  --cwd . --knexfile ./knexfile.ts",
-		"db:seed": "npm run knex -- seed:run  --cwd . --knexfile ./knexfile.ts",
+		"db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
+		"db:migrate:rollback": "knex -- migrate:rollback  --cwd . --knexfile ./knexfile.js",
+		"db:seed": "npm run db:migrate && knex -- seed:run  --cwd . --knexfile ./knexfile.js",
 		"stagedb:migrate": "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:migrate",
 		"stagedb:migrate:rollback":  "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:migrate:rollback",
 		"stagedb:seed":  "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:seed",
@@ -54,7 +53,7 @@
 		"@sample-stack/graphql-schema": "*",
 		"@sample-stack/server-core": "*",
 		"@sample-stack/core": "*",
-		"@sample-stack/store": "*",
+		"@sample-stack/store": "0.0.14",
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/utils": "*",
 		"@cdm-logger/server": "^3.0.2",
