--- a/package.json
+++ b/package.json
@@ -181,7 +181,8 @@
     "tslint-react": "^3.0.0",
     "typescript": "2.7.1",
     "typescript-require": "^0.2.9-1",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "uglify-es": "3.3.9",
+    "uglifyjs-webpack-plugin": "1.1.8",
     "url-loader": "^0.6.2",
     "wait-on": "^2.0.2",
     "webpack": "^3.10.0",
