fix nats version compatiblity

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/nats-hemera": "^2.0.0",
-    "@types/node": "^8.0.0",
+    "@types/node": "^8.9.0",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.36",
     "@types/react-addons-test-utils": "^0.14.18",
@@ -248,7 +248,7 @@
     "inversify": "^4.10.0",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.13.0",
-    "nats": "^0.7.25",
+    "nats": "0.7.24",
     "nats-hemera": "^3.1.7",
     "nconf": "^0.10.0",
     "node-pre-gyp": "~0.6.31",
