--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
     "redux-devtools": "^3.4.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-mock-store": "^1.2.3",
