--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "name": "sample-stack",
   "private": true,
   "version": "0.2.3",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
+    "prepublish": "git checkout publish && git merge -s recursive -X theirs master",
     "publish": "lerna publish",
+    "postpublish": "git checkout master",
     "publish:force": "npm run publish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
     "install": "npm run lerna",
