--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
-    "prepublish": "git checkout publish && git merge -s recursive -X theirs master",
-    "publish": "lerna publish",
+    "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
+    "publish": "npm run lerna:prepublish && lerna publish",
     "postpublish": "git checkout master",
     "publish:force": "npm run publish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
