update nats version

--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sample-stack-hemera-server",
-    "version": "0.0.10",
+    "version": "0.0.1",
     "description": "",
     "main": "index.js",
     "private": true,
@@ -30,14 +30,14 @@
         "@sample-stack/hemera-plugin": "*",
         "dotenv": "^5.0.0",
         "graphql-nats-subscriptions": "^1.1.0",
-        "nats": "0.7.24",
         "helmet": "^3.10.0",
-        "nats-hemera": "^3.1.7",
         "hemera-joi": "^3.0.1",
         "hemera-zipkin": "^3.0.1",
         "hemera-plugin": "0.1.1",
         "hemera-safe-promises": "0.0.2",
         "hemera-sql-store": "^4.0.0",
+        "nats": "^0.7.26",
+        "nats-hemera": "^3.1.7",
         "inversify": "^4.10.0",
         "reflect-metadata": "^0.1.12"
     },
