--- a/package.json
+++ b/package.json
@@ -252,7 +252,7 @@
     "inversify": "^4.10.0",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.13.0",
-    "nats": "0.7.24",
+    "nats": "^0.7.26",
     "nats-hemera": "^3.1.7",
     "nconf": "^0.10.0",
     "node-pre-gyp": "~0.6.31",
