--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -10,7 +10,7 @@
         "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env nodemon dist",
         "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon dist",
         "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-        "docker:run": "docker run -it $npm_package_name:$npm_package_version",
+        "docker:run": "docker run -it --env-file ../../config/staging/docker-staging.env  --net=host $npm_package_name:$npm_package_version",
         "prebuild": "npm run build:clean",
         "pretest": "npm run build",
         "build": "cross-env NODE_ENV=production npm run build:dist",
