--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -16,7 +16,7 @@
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
 		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  --net=host -it $npm_package_name:$npm_package_version",
+		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
 		"preupver": "npm test",
 		"upver": "standard-version",
 		"db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
