--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -25,9 +25,11 @@
     "author": "CDMBase LLC",
     "license": "ISC",
     "dependencies": {
+        "@cdm-logger/server": "^3.0.2",
         "@sample-stack/core": "*",
         "@sample-stack/hemera-plugin": "*",
         "@sample-stack/server-core": "*",
+        "@sample-stack/utils": "*",
         "dotenv": "^5.0.0",
         "graphql-nats-subscriptions": "^1.1.0",
         "helmet": "^3.10.0",
