--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/nats-hemera": "^2.0.0",
-    "@types/node": "^8.9.0",
+    "@types/node": "^8.9.5",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.36",
     "@types/react-addons-test-utils": "^0.14.18",
@@ -243,16 +243,16 @@
     "graphql-tag": "^2.8.0",
     "graphql-tools": "2.23.1",
     "helmet": "^3.10.0",
-    "hemera-joi": "^3.0.1",
-    "hemera-plugin": "0.1.1",
-    "hemera-safe-promises": "0.0.2",
+    "hemera-joi": "^3.1.0",
+    "hemera-plugin": "0.1.2",
+    "hemera-safe-promises": "^0.0.2",
     "hemera-sql-store": "^4.0.0",
-    "hemera-zipkin": "^3.0.1",
+    "hemera-zipkin": "^3.1.0",
     "immutability-helper": "^2.2.2",
     "inversify": "^4.10.0",
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.13.0",
-    "nats": "^0.7.26",
+    "nats": "^0.7.29",
     "nats-hemera": "^3.1.7",
     "nconf": "^0.10.0",
     "node-pre-gyp": "~0.6.31",
