--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -33,13 +33,13 @@
         "dotenv": "^5.0.0",
         "graphql-nats-subscriptions": "^1.1.0",
         "helmet": "^3.10.0",
-        "hemera-joi": "^3.0.1",
-        "hemera-plugin": "0.1.1",
-        "hemera-safe-promises": "0.0.2",
+        "hemera-joi": "^3.1.0",
+        "hemera-plugin": "0.1.2",
+        "hemera-safe-promises": "^0.0.2",
         "hemera-sql-store": "^4.0.0",
-        "hemera-zipkin": "^3.0.1",
+        "hemera-zipkin": "^3.1.0",
         "inversify": "^4.10.0",
-        "nats": "^0.7.26",
+        "nats": "^0.7.29",
         "nats-hemera": "^3.1.7",
         "reflect-metadata": "^0.1.12"
     },
