--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "@types/express": "^4.0.35",
     "@types/graphql": "^0.11.8",
     "@types/isomorphic-fetch": "0.0.34",
-    "@types/jest": "^22.1.1",
+    "@types/jest": "^22.2.0",
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/nats-hemera": "^2.0.0",
     "@types/node": "^8.9.5",
-    "@types/prop-types": "^15.5.1",
+    "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.36",
     "@types/react-addons-test-utils": "^0.14.18",
     "@types/react-dom": "^16.0.3",
@@ -106,20 +106,20 @@
     "caporal": "^0.9.0",
     "concurrently": "^3.5.0",
     "connect": "^3.6.5",
-    "copy-webpack-plugin": "^4.3.1",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "eslint": "^4.17.0",
     "eslint-plugin-graphql": "^1.5.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "freeport-async": "^1.1.1",
     "fs-extra": "^4.0.2",
-    "graphql-code-generator": "^0.8.14",
-    "haul": "1.0.0-beta.6",
+    "graphql-code-generator": "^0.8.21",
+    "haul": "1.0.0-beta.13",
     "hemera-testsuite": "^2.0.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
@@ -130,11 +130,11 @@
     "ip": "^1.1.5",
     "isomorphic-style-loader": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "^22.1.0",
-    "jest-cli": "^22.1.0",
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
     "jsdom": "^11.6.0",
     "json-loader": "^0.5.7",
-    "lerna": "2.8.0",
+    "lerna": "2.9.0",
     "lint-staged": "^6.1.0",
     "lodash": "^4.17.4",
     "mime": "^2.2.0",
@@ -184,13 +184,13 @@
     "tslint-react": "^3.0.0",
     "typescript": "2.7.1",
     "typescript-require": "^0.2.9-1",
-    "uglify-es": "3.3.9",
+    "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "1.1.8",
-    "url-loader": "^0.6.2",
+    "url-loader": "^1.0.1",
     "wait-on": "^2.0.2",
-    "webpack": "^3.10.0",
+    "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-dev-server": "^3.1.1",
     "webpack-fail-plugin": "^2.0.0",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-manifest-plugin": "^1.3.2",
@@ -216,23 +216,23 @@
     "apollo-upload-server": "^5.0.0",
     "app-root-path": "^2.0.1",
     "body-parser": "^1.18.2",
-    "browser-bunyan": "^1.2.2",
+    "browser-bunyan": "^1.3.0",
     "bunyan": "^1.8.10",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
     "dotenv": "^5.0.0",
     "export-dir": "^0.1.2",
-    "fela": "6.1.3",
+    "fela": "6.1.5",
     "fela-beautifier": "^5.0.15",
-    "fela-dom": "7.0.4",
+    "fela-dom": "7.0.6",
     "fela-font-renderer": "^5.0.10",
     "fela-perf": "^5.0.3",
-    "fela-plugin-fallback-value": "^5.0.16",
+    "fela-plugin-fallback-value": "^5.0.17",
     "fela-plugin-logger": "^5.0.4",
     "fela-plugin-lvha": "^5.0.15",
-    "fela-plugin-prefixer": "^5.0.16",
-    "fela-plugin-unit": "^5.0.15",
-    "fela-plugin-validator": "^5.0.17",
+    "fela-plugin-prefixer": "^5.0.18",
+    "fela-plugin-unit": "^5.0.16",
+    "fela-plugin-validator": "^5.1.1",
     "graphql": "^0.11.7",
     "graphql-auth": "^0.2.0",
     "graphql-resolve-batch": "^1.0.2",
@@ -242,20 +242,20 @@
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "2.23.1",
-    "helmet": "^3.10.0",
+    "helmet": "^3.12.0",
     "hemera-joi": "^3.1.0",
     "hemera-plugin": "0.1.2",
     "hemera-safe-promises": "^0.0.2",
     "hemera-sql-store": "^4.0.0",
     "hemera-zipkin": "^3.1.0",
-    "immutability-helper": "^2.2.2",
-    "inversify": "^4.10.0",
+    "immutability-helper": "^2.6.6",
+    "inversify": "^4.11.1",
     "isomorphic-fetch": "^2.2.1",
-    "knex": "^0.13.0",
-    "nats": "^0.7.29",
-    "nats-hemera": "^3.1.7",
+    "knex": "^0.14.4",
+    "nats": "^0.8.4",
+    "nats-hemera": "^3.5.1",
     "nconf": "^0.10.0",
-    "node-pre-gyp": "~0.6.31",
+    "node-pre-gyp": "^0.9.0",
     "persistgraphql": "^0.3.11",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
