--- a/lerna.json
+++ b/lerna.json
@@ -15,7 +15,8 @@
   },
   "packages": [
     "packages/*",
-    "servers/*"
+    "servers/*",
+    "packages-modules/*"
   ],
   "version": "0.0.0"
 }
