--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -49,6 +49,7 @@
 		"@sample-stack/client-redux": "*",
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/utils": "*",
+		"@sample-stack/counter": "*",
 		"apollo-cache-inmemory": "^1.1.11",
 		"apollo-client": "^2.2.7",
 		"apollo-fetch": "^0.7.0",
@@ -87,7 +88,6 @@
 		"react-redux": "^5.0.7",
 		"react-redux-typescript": "^2.3.0",
 		"react-resizable": "^1.7.4",
-		"react-resizable-box": "^2.1.0",
 		"react-router-dom": "^4.2.2",
 		"react-router-redux": "^4.0.8",
 		"react-transition-group": "^2.2.1",
