--- a/package.json
+++ b/package.json
@@ -206,11 +206,12 @@
     "@cdm-logger/server": "^3.0.2",
     "apollo-cache-inmemory": "^1.1.11",
     "apollo-client": "^2.2.7",
+    "apollo-engine": "^1.0.2",
     "apollo-fetch": "^0.7.0",
     "apollo-fetch-upload": "^1.2.0",
-    "apollo-engine": "^1.0.2",
     "apollo-link": "^1.2.1",
     "apollo-link-batch-http": "^1.2.1",
+    "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.7",
     "apollo-logger": "^0.1.1",
     "apollo-upload-server": "^5.0.0",
@@ -235,8 +236,9 @@
     "fela-plugin-validator": "^5.1.1",
     "graphql": "^0.11.7",
     "graphql-auth": "^0.2.0",
-    "graphql-resolve-batch": "^1.0.2",
+    "graphql-iso-date": "^3.5.0",
     "graphql-nats-subscriptions": "^1.1.0",
+    "graphql-resolve-batch": "^1.0.2",
     "graphql-server-core": "^1.3.2",
     "graphql-server-express": "^1.3.2",
     "graphql-subscriptions": "^0.5.8",
@@ -277,7 +279,7 @@
     "rxjs": "^5.5.7",
     "sequelize": "^4.32.6",
     "serialize-javascript": "^1.4.0",
-    "sqlite3": "^3.1.8",
+    "sqlite3": "^3.1.13",
     "subscriptions-transport-ws": "^0.9.6"
   }
 }
