seperated connector  to work

--- a/package.json
+++ b/package.json
@@ -257,6 +257,7 @@
     "hemera-safe-promises": "^0.0.2",
     "hemera-sql-store": "^4.0.0",
     "hemera-zipkin": "^3.1.0",
+    "history": "^4.7.2",
     "immutability-helper": "^2.6.6",
     "inversify": "^4.11.1",
     "isomorphic-fetch": "^2.2.1",
@@ -274,8 +275,9 @@
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "^5.0.0-alpha.8",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^4.8.0",
     "recompose": "^0.26.0",
