--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/nats-hemera": "^2.0.0",
-    "@types/node": "^8.9.5",
+    "@types/node": "^8.10.0",
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.36",
     "@types/react-addons-test-utils": "^0.14.18",
@@ -111,9 +111,9 @@
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "express": "^4.16.3",
     "eslint": "^4.17.0",
     "eslint-plugin-graphql": "^1.5.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "freeport-async": "^1.1.1",
@@ -158,8 +158,8 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
     "redux-devtools": "^3.4.0",
-    "redux-devtools-extension": "^2.13.2",
     "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-mock-store": "^1.2.3",
     "remap-istanbul": "^0.9.5",
@@ -172,7 +172,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.5.0",
-    "spinjs": "0.4.18",
+    "spinjs": "^0.4.54",
     "standard-version": "^4.0.0",
     "style-loader": "^0.20.1",
     "tcomb": "^3.2.24",
@@ -190,7 +190,7 @@
     "wait-on": "^2.0.2",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^3.1.1",
+    "webpack-dev-server": "^2.11.2",
     "webpack-fail-plugin": "^2.0.0",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-manifest-plugin": "^1.3.2",
@@ -204,11 +204,11 @@
   "dependencies": {
     "@cdm-logger/client": "^3.1.1",
     "@cdm-logger/server": "^3.0.2",
-    "@common-stack/client-core": "0.0.12",
-    "@common-stack/client-react": "0.0.12",
-    "@common-stack/client-redux": "0.0.12",
-    "@common-stack/core": "0.0.12",
-    "@common-stack/server-core": "0.0.12",
+    "@common-stack/client-core": "0.0.13",
+    "@common-stack/client-react": "0.0.13-1",
+    "@common-stack/client-redux": "0.0.13",
+    "@common-stack/core": "0.0.13",
+    "@common-stack/server-core": "0.0.13",
     "apollo-cache": "^1.1.6",
     "apollo-cache-inmemory": "^1.1.11",
     "apollo-client": "^2.2.7",
