--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/react-addons-test-utils": "^0.14.18",
     "@types/react-dom": "^16.0.3",
     "@types/react-helmet": "^5.0.3",
+    "@types/react-hot-loader": "^3.0.6",
     "@types/react-redux": "^5.0.8",
     "@types/recompose": "^0.24.1",
     "@types/semver": "^5.5.0",
@@ -273,6 +274,7 @@
     "react-dom": "^16.2.0",
     "react-fela": "6.2.4",
     "react-helmet": "^5.2.0",
+    "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
     "react-router": "^4.2.0",
