--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.5.0",
-    "spinjs": "0.4.109",
+    "spinjs": "https://github.com/veeramarni/spinjs.git",
     "standard-version": "^4.0.0",
     "style-loader": "^0.20.1",
     "tcomb": "^3.2.24",
@@ -275,7 +275,7 @@
     "react-dom": "^16.2.0",
     "react-fela": "6.2.4",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.1",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
     "react-router": "^4.2.0",
