--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -97,7 +97,7 @@
 	},
 	"devDependencies": {
 		"cross-env": "^5.1.3",
-		"spinjs": "0.4.109",
+		"spinjs": "https://github.com/veeramarni/spinjs.git",
 		"ts-node": "^4.1.0",
 		"typescript": "2.7.1",
 		"jest": "^22.4.2",
